--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Fonts -->
-    <script src="https://kit.fontawesome.com/0aa8656a1b.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-
     <!-- CSS stylesheet -->
     <link rel="stylesheet" href="style.css">
 
@@ -18,7 +12,7 @@
 </head>
 
 <body>
-    <!--Header and Menu Section-->
+    <!--Header -->
     <header class="container">
         <nav>
             <ul>
